k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-app
  namespace: incident-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incident-app
  template:
    metadata:
      labels:
        app: incident-app
    spec:
      containers:
      - name: incident-app
        image: calix114/incident-app:latest
        imagePullPolicy: IfNotPresent  
        ports:
        - containerPort: 5000
