k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-app-service
  namespace: incident-mgmt
spec:
  selector:
    app: incident-app
  ports:
    - protocol: TCP
      port: 80        # Service port
      targetPort: 5000  # Container port
  type: NodePort
